@@ -13,13 +13,19 @@ import java.util.List;
 public interface IMethodSelector extends Serializable {
   
   /**
+   * @param context The selector context.  The implementation of this method
+   * can invoke setHalted(true) to indicate that no other Method Selector
+   * should be invoked by TestNG after this one.  Additionally, this
+   * implementation can manipulate the Map object returned by
+   * getUserData().
    * @param method The test method
    * @param isTestMethod true if this is a @Test method, false if it's a 
    * @Configuration method
    * @return true if this method should be included in the test run, false
    * otherwise
    */
-  public boolean includeMethod(ITestNGMethod method, boolean isTestMethod);
+  public boolean includeMethod(IMethodSelectorContext context,
+      ITestNGMethod method, boolean isTestMethod);
 
   /**
    * Invoked when all the test methods are known so that the method selector
