@@ -3,11 +3,15 @@ package test.methodselectors;
 import java.util.List;
 
 import org.testng.IMethodSelector;
+import org.testng.IMethodSelectorContext;
 import org.testng.ITestNGMethod;
 
 public class AllTestsMethodSelector implements IMethodSelector {
 
-  public boolean includeMethod(ITestNGMethod method, boolean isTestMethod) {
+  public boolean includeMethod(IMethodSelectorContext context,
+      ITestNGMethod method, boolean isTestMethod) 
+  {
+    context.setStopped(true);
     return true;
   }
   
