@@ -1,0 +1,4 @@
+package test.methodselectors;
+
+public @interface NoTest {
+}
